<resources>
    <string name="app_name">天气</string>
    <string name="add">添加</string>
    <string name="about">关于</string>
    <string name="edit">编辑</string>
    <string name="edit_city">编辑城市</string>
    <string name="set">设置</string>
    <string name="quit">退出</string>
    <string name="update_launch">启动时更新天气</string>
    <string name="update_bg">后台更新天气</string>
    <string name="update_frequency">更新频率</string>
    <string name="open_notification">开启通知栏常驻</string>
</resources>
