<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update_launch"
            android:textColor="#111"
            android:textSize="15dp" />

        <Switch
            android:id="@+id/update_launch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update_bg"
            android:textColor="#111"
            android:textSize="15dp" />

        <Switch
            android:id="@+id/update_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/divider" />

    <LinearLayout
        android:id="@+id/frequency_lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_frequency"
            android:textColor="#111"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/frequency_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/open_notification"
                android:textColor="#111"
                android:textSize="15dp" />

            <Switch
                android:id="@+id/open_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>
