<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical">

        <!--编辑-->
        <LinearLayout
            android:id="@+id/edit_lin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:padding="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:src="@drawable/edit" />

            <TextView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:text="@string/edit" />

        </LinearLayout>

        <!--横线-->
        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/divider" />

        <!--设置-->
        <LinearLayout
            android:id="@+id/set_lin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:padding="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/set" />

            <TextView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:text="@string/set" />

        </LinearLayout>

        <!--横线-->
        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/divider" />

        <!--退出-->
        <LinearLayout
            android:id="@+id/quit_lin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:padding="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/quit" />

            <TextView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:text="@string/quit" />

        </LinearLayout>

        <!--横线-->
        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/divider" />

        <!--关于-->
        <LinearLayout
            android:id="@+id/about_lin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:padding="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/about" />

            <TextView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:text="@string/about" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
